fixed appearance on mobile devices

--- a/Laura-Voicu.css
+++ b/Laura-Voicu.css
@@ -1541,7 +1541,7 @@
 
 .u-section-5 .u-image-1 {
   min-height: 558px;
-  background-image: url("images/pexelsphoto3551227.jpeg");
+  background-image: url("images/51e3d34b4253b108f5d084609629317e113fdce15b4c704f75267dd49649c451_1280.jpg");
   background-position: 50% 50%;
 }
 
@@ -1752,7 +1752,7 @@
     font-size: 1.5rem;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 1017px;
+  min-height: 796px;
 }
 
 .u-section-6 .u-layout-wrap-1 {
@@ -1774,7 +1774,7 @@
 }
 
 .u-section-6 .u-container-layout-2 {
-  padding: 30px 0;
+  padding: 30px 0 320px;
 }
 
 .u-section-6 .u-text-1 {
@@ -1798,7 +1798,7 @@
 }
 
 .u-section-6 .u-text-3 {
-  margin: -663px 873px 60px 17px;
+  margin: -663px 873px 0 17px;
 }
 
 .u-section-6 .u-btn-1 {
@@ -1811,7 +1811,7 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 842px;
+    min-height: 961px;
   }
 
   .u-section-6 .u-layout-wrap-1 {
@@ -1828,8 +1828,8 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-top: 40px;
     font-size: 6.875rem;
+    margin-top: 40px;
   }
 
   .u-section-6 .u-layout-cell-3 {
@@ -1837,15 +1837,14 @@
   }
 
   .u-section-6 .u-text-3 {
-    margin-top: 36px;
-    margin-right: auto;
-    margin-left: 16px;
+    width: auto;
+    margin: -654px 0 60px 16px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 640px;
+    min-height: 896px;
   }
 
   .u-section-6 .u-image-1 {
@@ -1861,7 +1860,7 @@
   }
 
   .u-section-6 .u-layout-cell-3 {
-    min-height: 100px;
+    min-height: 207px;
   }
 
   .u-section-6 .u-container-layout-3 {
@@ -1869,18 +1868,18 @@
   }
 
   .u-section-6 .u-text-3 {
-    margin-top: -149px;
+    margin-top: -420px;
     margin-left: 25px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 536px;
+    min-height: 853px;
   }
 
   .u-section-6 .u-layout-wrap-1 {
-    margin-top: 1160px;
+    margin-top: 42px;
     margin-right: initial;
     margin-left: initial;
   }
@@ -1898,15 +1897,19 @@
     font-size: 4.5rem;
   }
 
+  .u-section-6 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
   .u-section-6 .u-text-3 {
-    margin-top: 8px;
+    margin-top: -428px;
     margin-left: 19px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 420px;
+    min-height: 1099px;
   }
 
   .u-section-6 .u-layout-wrap-1 {
@@ -1920,7 +1923,7 @@
   }
 
   .u-section-6 .u-layout-cell-2 {
-    min-height: 137px;
+    min-height: 256px;
   }
 
   .u-section-6 .u-container-layout-2 {
@@ -1939,7 +1942,7 @@
   }
 
   .u-section-6 .u-text-3 {
-    margin-top: 83px;
+    margin-top: -725px;
     margin-left: 12px;
   }
 }.u-section-7 {
@@ -1947,16 +1950,16 @@
 }
 
 .u-section-7 .u-sheet-1 {
-  min-height: 810px;
+  min-height: 500px;
 }
 
 .u-section-7 .u-layout-wrap-1 {
   margin-top: 60px;
-  margin-bottom: 60px;
+  margin-bottom: 10px;
 }
 
 .u-section-7 .u-layout-cell-1 {
-  min-height: 374px;
+  min-height: 430px;
 }
 
 .u-section-7 .u-container-layout-1 {
@@ -1981,8 +1984,15 @@
   margin: -64px auto 0 0;
 }
 
+.u-section-7 .u-text-2 {
+  font-size: 2.25rem;
+  line-height: 1;
+  font-weight: 700;
+  margin: 22px 10px -14px -30px;
+}
+
 .u-section-7 .u-layout-cell-2 {
-  min-height: 374px;
+  min-height: 430px;
 }
 
 .u-section-7 .u-container-layout-2 {
@@ -2015,64 +2025,41 @@
   font-weight: 700;
 }
 
-.u-section-7 .u-image-1 {
-  min-height: 374px;
-  background-image: url("https://pixabay.com/get/51e1d74b484fad0bffd8992cc62e377a153ddaed4e5077497d2979dc9049c7_1280.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-7 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-7 .u-layout-cell-4 {
-  min-height: 374px;
-}
-
-.u-section-7 .u-container-layout-4 {
-  padding: 30px 20px;
-}
-
-.u-section-7 .u-text-2 {
-  font-size: 2.25rem;
-  line-height: 1;
-  font-weight: 700;
-  margin: 103px 0 0;
-}
-
 @media (max-width: 1199px) {
   .u-section-7 .u-sheet-1 {
-    min-height: 688px;
+    min-height: 576px;
+  }
+
+  .u-section-7 .u-layout-wrap-1 {
+    margin-top: 95px;
+    margin-bottom: 0;
   }
 
   .u-section-7 .u-layout-cell-1 {
-    min-height: 308px;
+    min-height: 355px;
   }
 
   .u-section-7 .u-text-1 {
     margin-right: 151px;
   }
 
-  .u-section-7 .u-layout-cell-2 {
-    min-height: 308px;
-  }
-
-  .u-section-7 .u-image-1 {
-    min-height: 308px;
-  }
-
-  .u-section-7 .u-layout-cell-4 {
-    min-height: 308px;
-  }
-
   .u-section-7 .u-text-2 {
     font-size: 1.875rem;
+    margin: 103px 0 0;
+  }
+
+  .u-section-7 .u-layout-cell-2 {
+    min-height: 355px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-7 .u-sheet-1 {
-    min-height: 1208px;
+    min-height: 611px;
+  }
+
+  .u-section-7 .u-layout-wrap-1 {
+    margin-bottom: 5px;
   }
 
   .u-section-7 .u-layout-cell-1 {
@@ -2086,19 +2073,11 @@
   .u-section-7 .u-layout-cell-2 {
     min-height: 100px;
   }
-
-  .u-section-7 .u-image-1 {
-    min-height: 236px;
-  }
-
-  .u-section-7 .u-layout-cell-4 {
-    min-height: 100px;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-7 .u-sheet-1 {
-    min-height: 2180px;
+    min-height: 944px;
   }
 
   .u-section-7 .u-container-layout-1 {
@@ -2110,20 +2089,6 @@
     padding-left: 10px;
     padding-right: 10px;
   }
-
-  .u-section-7 .u-image-1 {
-    min-height: 354px;
-  }
-
-  .u-section-7 .u-container-layout-3 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-7 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
 }
 
 @media (max-width: 575px) {
@@ -2131,15 +2096,7 @@
     min-height: 1050px;
   }
 
-  .u-section-7 .u-layout-wrap-1 {
-    margin-bottom: 46px;
-  }
-
   .u-section-7 .u-text-1 {
     margin-right: 0;
-  }
-
-  .u-section-7 .u-image-1 {
-    min-height: 434px;
   }
 }
